--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
             <div class="container">
                 <h1 id="main-heading">Affordable Professional Web Design</h1>
                 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium doloremque fuga sit eveniet, saepe nulla numquam aperiam consequuntur similique, voluptatibus laboriosam quas voluptate, eaque possimus recusandae dolorem ducimus autem molestias ! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum neque repellendus dolores laborum, vel omnis tempora placeat modi tenetur doloribus commodi voluptates, quo, magni ipsum adipisci. Ducimus voluptatum modi a.</P>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci quasi perspiciatis, velit vitae error exercitationem dolorum optio dolor, unde harum provident quisquam autem natus iure possimus quibusdam? Blanditiis, vel consequatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia ea maiores magni fuga quisquam in expedita, repellendus quo corporis quidem ipsa consectetur neque modi laudantium laboriosam omnis provident tempore!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse in sunt accusantium reprehenderit, animi quibusdam corrupti eveniet ea fugiat fuga at totam rem beatae repellat. Officiis nobis eligendi iusto voluptate? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt repudiandae libero quibusdam delectus veritatis sint sed nostrum, cumque, alias corporis est, quisquam temporibus in id earum accusamus tempore magnam eveniet.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti laboriosam voluptates consectetur magni eaque alias recusandae voluptas sint quas! Repudiandae eos voluptatum distinctio nemo nulla doloremque est minima sunt sint? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam, est alias amet possimus illum incidunt tenetur illo, deserunt explicabo distinctio eius nesciunt ea odio rem quis accusamus inventore eligendi quibusdam?</p>
-            </div>     
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci quasi perspiciatis, velit vitae error exercitationem dolorum optio dolor, unde harum provident quisquam autem natus iure possimus quibusdam? Blanditiis, vel consequatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia ea maiores magni fuga quisquam in expedita, repellendus quo corporis quidem ipsa consectetur neque modi</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse in sunt accusantium reprehenderit, animi quibusdam corrupti eveniet ea fugiat fuga at totam rem beatae repellat. Officiis nobis eligendi iusto voluptate? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt repudiandae libero quibusdam delectus veritatis sint sed nostrum, cumque, alias corporis est, quisquam temporibus in id</p>
+             </div>     
         </section>
 
         <!-- <section id="newsletter">
@@ -58,26 +57,26 @@
                 <div class="box">
                     <img src="img/logo_html.png" alt="HTML5 Logo">
                     <h3>HTML5 Markup</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores sed quisquam enim aliquam animi aliquid ab mollitia at, voluptatem reprehenderit sunt, est architecto id ullam suscipit blanditiis dolore dignissimos facilis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus praesentium impedit voluptas? Officiis cupiditate vel accusamus laboriosam molestiae repudiandae adipisci temporibus dolor, ipsa aspernatur deleniti esse dignissimos perspiciatis labore quo!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odio, maiores id fuga eum nobis consequuntur quos iste voluptatum dolorum temporibus
                 </div>
 
                 <div class="box">
                     <img src="img/logo_css.png" alt="CSS3 Logo">
                     <h3>CSS3 Styling</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dignissimos exercitationem hic. Mollitia dolorem numquam consequuntur, vel nisi cum! Sequi cupiditate voluptatum repellat sed quia cumque consequatur officia? Ab, fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, perspiciatis illum, totam a, cupiditate consectetur molestias rem in repellendus tenetur suscipit. Deleniti doloribus, aspernatur dolore voluptatum neque ut dicta cupiditate.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odio, maiores id fuga eum nobis consequuntur quos iste voluptatum dolorum temporibus
                 </div>
 
                 <div class="box">
 
                     <img src="img/logo_brush.png" alt="UI/UX Picture">
                     <h3>UI/UX Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odio, maiores id fuga eum nobis consequuntur quos iste voluptatum dolorum temporibus, unde molestias sapiente, nihil architecto eligendi quasi obcaecati voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas quidem iste molestiae ratione, error, cumque odio ipsam minus minima dicta iure laudantium? Assumenda aspernatur temporibus maxime praesentium, laborum minima cumque!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam odio, maiores id fuga eum nobis consequuntur quos iste voluptatum dolorum temporibus</p>
                 </div>
             </div>
         </section>
 
         <footer>
-            <p>JohnDoe Designs, Copyright &copy; 2023 </p>
+            <p>JohnDoe Designs, Copyright &copy; 2024 </p>
         </footer>
     </body>
 </html>
