--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
 
                 <aside id="sidebar">
                     <div class="dark">
-                        <h3>Get A Qoute</h3>
+                        <h3>Contact Us</h3>
                         <form class="quote">
                             <div>
                                 <label>Name</label><br>
