refact: Modify website content
Fix english on about page.

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
                 <aside id="sidebar">
                     <div class="dark">
-                        <h3>What We Do</h3>
+                        <h3>What We Do?</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, provident ratione sint, architecto velit optio consequatur illo magnam aliquam labore commodi? Voluptas odio beatae</p>
                     </div>
                 </aside>
@@ -71,7 +71,7 @@
         </section>
 
         <footer>
-            <p>JohnDoe Designs, Copyright &copy; 2023 </p>
+            <p>JohnDoe Designs, Copyright &copy; 2024 </p>
         </footer>
     </body>
 </html>
